# tephpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md
.github/workflows/: ci-changelog.yml  ci-citation.yml  ci-docs.yml  ci-tests.yml  ci-wheels.yml  codeql.yml
changelog/: 1.documentation.rst  1.internal.rst  5.enhancement.rst  9.feature.rst  README.md  template.rst
docs/: AGENTS.md  Makefile  make.bat
docs/src/: conf.py  index.rst  refs.bib
docs/src/developer/: docs-style.rst  index.rst
docs/src/explanation/: index.rst
docs/src/howtos/: index.rst
docs/src/reference/: changelog.rst  glossary.rst  index.rst
docs/src/tutorials/: index.rst
docs/superpowers/plans/: 2026-07-22-tephpy-foundation.md  2026-07-23-tephpy-transforms-projection.md
docs/superpowers/specs/: 2026-07-22-tephpy-design.md
requirements/: pypi-core.txt  pypi-optional-devs.txt  pypi-optional-docs.txt  pypi-optional-test.txt
src/tephpy/: __init__.py  _constants.py  transforms.py
src/tephpy/plotting/: __init__.py  axes.py
tests/: AGENTS.md  __init__.py  conftest.py  test_axes.py  test_import.py  test_oracle.py  test_transforms.py
tests/fixtures/: generate_tephi_oracle.py  tephi_oracle.json
