[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tephpy"
description = "Plot and analyse tephigrams, with MetPy-powered thermodynamic analysis."
authors = [{ name = "tephpy Contributors" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies", "readme", "version"]
keywords = ["tephigram", "meteorology", "thermodynamics", "sounding", "matplotlib"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Repository = "https://github.com/bjlittle/tephpy"
Issues = "https://github.com/bjlittle/tephpy/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/pypi-core.txt"] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.dynamic.optional-dependencies]
test = { file = ["requirements/pypi-optional-test.txt"] }
docs = { file = ["requirements/pypi-optional-docs.txt"] }
devs = { file = ["requirements/pypi-optional-devs.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tephpy*"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "dirty-tag"
write_to = "src/tephpy/_version.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-config", "--strict-markers", "-ra"]
minversion = "8.0"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = ["error"]
markers = ["mpl_image_compare: matplotlib image comparison tests"]

[tool.coverage.run]
branch = true
source = ["tephpy"]
omit = ["*/_version.py"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "@overload"]
show_missing = true

[tool.ruff]
line-length = 88
src = ["src", "tests", "docs/src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["CPY001"]
preview = true
explicit-preview-rules = true
select = ["ALL", "D212"]
ignore = [
  "COM812",  # trailing comma missing (conflicts with formatter)
  "COM819",  # trailing comma prohibited
  "D105",    # missing docstring in magic method
  "FBT002",  # boolean default positional argument
  "FIX002",  # line contains TODO
  "ISC001",  # implicit string concat (conflicts with formatter)
  "N806",    # variable in function should be lowercase (T, P are physics symbols)
  "PLR2004", # magic value in comparison
  "S101",    # use of assert (pytest)
  "TD003",   # missing issue link after TODO
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = '''
# Copyright \(c\) 2026, tephpy Contributors\.
#
# This file is part of tephpy and is distributed under the 3-Clause BSD license\.
# See the LICENSE file in the package root directory for licensing details\.
'''

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tephpy"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN201", "SLF001", "D103"]
"docs/src/conf.py" = ["INP001", "A001"]
