[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3", "setuptools_scm>=8"]

[project]
authors = [{ name = "tephpy Contributors" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Visualization",
]
description = "Plot and analyse tephigrams, with MetPy-powered thermodynamic analysis."
dynamic = ["dependencies", "optional-dependencies", "readme", "version"]
keywords = [
  "tephigram",
  "meteorology",
  "thermodynamics",
  "sounding",
  "matplotlib",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "tephpy"
requires-python = ">=3.12"

[project.urls]
Issues = "https://github.com/bjlittle/tephpy/issues"
Repository = "https://github.com/bjlittle/tephpy"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/pypi-core.txt"] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.dynamic.optional-dependencies]
devs = { file = ["requirements/pypi-optional-devs.txt"] }
docs = { file = ["requirements/pypi-optional-docs.txt"] }
test = { file = ["requirements/pypi-optional-test.txt"] }

[tool.setuptools.packages.find]
include = ["tephpy*"]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
version_file = "src/tephpy/_version.py"
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "-ra",
]
filterwarnings = ["error"]
log_level = "INFO"
markers = ["mpl_image_compare: matplotlib image comparison tests"]
minversion = "8.0"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
omit = ["*/_version.py"]
source = ["tephpy"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "@overload"]
show_missing = true

[tool.ruff]
line-length = 88
src = ["src", "tests", "docs/src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
explicit-preview-rules = true
extend-select = ["CPY001"]
ignore = [
  "COM812",  # trailing comma missing (conflicts with formatter)
  "COM819",  # trailing comma prohibited
  "D105",    # missing docstring in magic method
  "FBT002",  # boolean default positional argument
  "FIX002",  # line contains TODO
  "ISC001",  # implicit string concat (conflicts with formatter)
  "N806",    # variable in function should be lowercase (T, P are physics symbols)
  "PLR2004", # magic value in comparison
  "S101",    # use of assert (pytest)
  "TD003",   # missing issue link after TODO
]
preview = true
select = ["ALL", "D212"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = '''
# Copyright \(c\) 2026, tephpy Contributors\.
#
# This file is part of tephpy and is distributed under the 3-Clause BSD license\.
# See the LICENSE file in the package root directory for licensing details\.
'''

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["tephpy"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/src/conf.py" = ["INP001", "A001"]
"tests/*" = ["ANN001", "ANN201", "SLF001", "D103"]

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = ["src/tephpy"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
# MetPy and pint ship partial/absent stubs; do not fail on their imports.
ignore_missing_imports = true
module = ["metpy.*", "pint.*"]

[tool.repo-review]
ignore = [
  "PC180", # prettier (not used)
  "PP006", # dev dependency group
]

[tool.numpydoc_validation]
checks = ["all", "GL01", "GL02", "GL03", "SA01", "ES01", "EX01", "YD01"]

[tool.towncrier]
directory = "changelog"
filename = "CHANGELOG.rst"
package = "tephpy"
package_dir = "src"
template = "changelog/template.rst"

[[tool.towncrier.type]]
directory = "breaking"
name = "💣 Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "✨ New Features"
showcontent = true

[[tool.towncrier.type]]
directory = "enhancement"
name = "🚀 Enhancements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "🐛 Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "dependency"
name = "🔗 Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "📚 Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "💼 Internal"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "🧰 Miscellaneous"
showcontent = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tephpy = { path = ".", editable = true }

[tool.pixi.dependencies]
matplotlib-base = ">=3.9"
metpy = ">=1.6"
numpy = ">=2.0"
pint = ">=0.24"
scipy = ">=1.13"
setuptools = ">=77.0.3"
setuptools-scm = ">=8"

[tool.pixi.environments]
# "default" deliberately carries the tooling features so unqualified
# `pixi run <task>` (tests, docs, lint, ...) resolves without ambiguity.
default = { features = [
  "test",
  "docs",
  "devs",
  "py313",
], solve-group = "default" }
devs = { features = ["test", "docs", "devs", "py313"], solve-group = "default" }
docs = { features = ["docs", "devs", "py313"], solve-group = "default" }
test = { features = ["test", "devs", "py313"], solve-group = "default" }
test-py312 = { features = ["test", "devs", "py312"], solve-group = "py312" }
test-py313 = { features = ["test", "devs", "py313"], solve-group = "py313" }

[tool.pixi.feature.py312.dependencies]
pip = ">=25.0"
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
pip = ">=25.0"
python = "3.13.*"

[tool.pixi.feature.test.dependencies]
hypothesis = ">=6.100"
pytest = ">=8.0"
pytest-cov = ">=5.0"
pytest-mpl = ">=0.17"

[tool.pixi.feature.test.tasks.tests]
cmd = "pytest --cov --cov-report=xml"
description = "Run the unit test suite with coverage"

[tool.pixi.feature.test.tasks.tests-mpl-generate]
cmd = "pytest --mpl-generate-path=tests/baseline"
description = "Regenerate matplotlib image-comparison baselines"

[tool.pixi.feature.devs.dependencies]
check-manifest = ">=0.49"
mypy = ">=1.13"
pre-commit = ">=4.0"
python-build = ">=1.5"
ruff = ">=0.15"
zizmor = ">=1.9.0"

[tool.pixi.feature.devs.tasks.lint]
cmd = "pre-commit run --all-files"
description = "Run all pre-commit hooks"

[tool.pixi.feature.docs.dependencies]
make = ">=4.3"
myst-nb = ">=1.1"
numpydoc = ">=1.8"
pydata-sphinx-theme = ">=0.16"
sphinx = ">=8.0"
sphinx-autoapi = ">=3.3"
sphinx-copybutton = ">=0.5"
sphinx-design = ">=0.6"
sphinx-gallery = ">=0.17"
sphinx-togglebutton = ">=0.3"
sphinx_changelog = ">=1.6"
sphinxcontrib-bibtex = ">=2.6"
towncrier = ">=24.8"

[tool.pixi.feature.docs.tasks.docs]
cmd = "make html"
cwd = "docs"
description = "Build the HTML documentation"

[tool.pixi.feature.docs.tasks.docs-clean]
cmd = "make clean"
cwd = "docs"
description = "Remove built documentation artifacts"

[tool.pixi.feature.docs.tasks.serve-html]
cmd = "python -m http.server 11000 --directory _build/html"
cwd = "docs"
description = "Serve built docs on http://localhost:11000"
